--- a/_sass/_custom_classes.scss
+++ b/_sass/_custom_classes.scss
@@ -360,8 +360,30 @@ h2 {
     }
 }
 
-
-
+/* Uniform Feature Box Styling */
+.features-wrapper .row > div {
+    display: flex;
+    align-items: stretch;
+}
+.single-features {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.features-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.features-content h4,
+.features-content p {
+    margin: 0;
+}
 
 /*-----Top navigation-----*/
 
